tests/typechecker/should_fail/dot_operator_pattern_matching_3.csp
channel b : Int

fst(x.y) = x
snd(x.y) = y

testPatternMatch2 = snd(b.0) == false

